# github-mcp

./: .gitignore  LLM_client.py  README.md  branch_management.py  github-analysis-security.py  github-analysis.py  issue_tracking.py  main.py  pull_request.py  pyproject.toml  repo_management.py  start_servers.sh
src/: LLM_client.py  main.py  streamlit_app1.py
src/github_tools/: github_analysis.py  pull_request.py  repo_management.py
